# pgr2junit

./: Cargo.toml  LICENSE
data/fail/: regression.diffs  regression.out
data/mixed/: regression.out
data/parallel/: regression.out
data/single_dir/: regression.diffs
data/single_dir/results/: merge.out  misc.out
src/: lib.rs  main.rs  pgr_model.rs
tests/: integration_test.rs
