[package]
name = "pgr2junit"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "Utility to process pg_regress output to junit xml format"
repository = "https://github.com/kgyrtkirk/pg-dev-tools"

[dependencies]
quick-junit = "0.3"
patch = "0"
scanf = "*"
clap = { version = "3", features = ["derive"] }
